# engineering-data-hub

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  agent.md  compose.dev.yaml  compose.yaml  example.env
backend/: .dockerignore  Dockerfile  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/api/: __init__.py  views.py
backend/apps/audit/: __init__.py  apps.py  middleware.py  models.py  services.py  urls.py  views.py
backend/apps/backups/: __init__.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
backend/apps/config_registry/: __init__.py  apps.py  models.py  schemas.py  seed.py  services.py  urls.py  views.py
backend/apps/documents/: __init__.py  apps.py  extraction.py  models.py  serializers.py  storage.py  urls.py  views.py
backend/apps/folders/: __init__.py  apps.py  models.py  scanner.py  serializers.py  services.py  signals.py  tasks.py  templates.py  urls.py  views.py
backend/apps/imports/: __init__.py  apps.py  mapping.py  models.py  parsers.py  services.py  urls.py  views.py
backend/apps/projects/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/records/: __init__.py  apps.py  codes.py  models.py  serializers.py  urls.py  validation.py  views.py
backend/plastic_hub/: __init__.py  celery.py  urls.py  wsgi.py
backend/scripts/: client_readiness_smoke.py
backend/tests/: test_health.py  test_settings.py
(+211 files in other folders)
