[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "plastic-hub-backend"
version = "0.1.0"
description = "Django backend for Plastic Engineering Data Hub"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "psycopg[binary]>=3.2,<4.0",
    "celery>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "django-cors-headers>=4.4,<5.0",
    "django-filter>=24.3,<26.0",
    "pydantic>=2.8,<3.0",
    "python-dotenv>=1.0,<2.0",
    "structlog>=24.4,<26.0",
    "gunicorn>=23.0,<24.0",
    "ruff>=0.7,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-django>=4.9,<5.0",
    "freezegun>=1.5,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["plastic_hub*", "apps*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "plastic_hub.settings.test"
addopts = "--ds=plastic_hub.settings.test"
python_files = ["test_*.py", "*_test.py", "tests.py"]

[tool.ruff]
line-length = 100
target-version = "py312"
